--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node src/server.js",
+    "test": "npx jest --setupFiles ./src/setup.js",
+    "start:dev": "NODE_ENV=test node src/server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,7 @@
     "joi": "^17.4.2",
     "pg": "^8.7.1",
     "supertest": "^6.1.6",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "dotenv": "^10.0.0"
   }
 }
